src/test/ui/numeric/len.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/len.rs:3:5
   |
LL |     test(array.len());
   |     ^^^^^-----------^
   |          |
   |          expected `u32`, found `usize`
   |
note: function defined here
  --> $DIR/len.rs:6:4
   |
LL | fn test(length: u32) {
   |    ^^^^ -----------
help: provide an argument of the correct type
   |
LL |     test({u32});
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
